[tool.poetry]
name = "ig-2025"
version = "0.1.0"
description = ""
authors = ["sina <20732540+SinaKhalili@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
